2012-10-30  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/yarpscope/src/MainWindow.cpp
	* src/yarpscope/src/PlotManager.cpp
	* src/yarpscope/src/PlotManager.h: Implement auto rescale
	  function in yarpscope

2012-10-24  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_dev/include/yarp/dev/TestMotor.h: have test_motor
	device support IVelocityControl [thanks Juan G Victores]

	* example/matlab/simulink: example of using YARP from Matlab's
	simulink, contributed by Juan [thanks Juan G Victores]

2012-10-23  Marco Randazzo <marco.randazzo@iit.it>
	* src/libYARP_dev/ControlBoardPid.cpp 
	* src/libYARP_dev/include/yarp/dev/ControlBoardPid.h
	stiction_pos_val and stiction_neg_val parameters have been added to the yarp::dev::Pid class.
	
	* src/libYARP_dev/RemoteControlBoard.cpp
	* src/libYARP_dev/ServerControlBoard.cpp
	all the related methods (get/set pid) have been modified accordingly.	
	
	* conf/YarpVersion.cmake
    YARP_VERSION_TWEAK "9424"

2012-10-23  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/libYARP_OS/include/yarp/os/Thread.h: Make
	yarp::os::Thread::join() method public.

	* conf/YarpFindDependencies.cmake: Require TinyXML 2.6 for
	TiXmlElement::QueryBoolAttribute()

2012-10-17  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Companion.cpp: add "yarp sample" command
	to sample an input at a fixed frequency.

	* src/libYARP_OS/include/yarp/os/BufferedPort.h: add
	BufferedPort::setTargetPeriod method for explicitly
	rate-controlled input.

2012-10-16  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Companion.cpp: add "yarp merge" command,
	equivalent to portMerge utility in iCub repository.  Original
	code by Marco [thanks Marco Randazzo]

2012-10-11  Ugo Pattacini  <ugo.pattacini@iit.it>

   * src/libYARP_dev/include/yarp/dev/GazeControl.h,CartesianControl.h:
   added a couple of new methods for low-level tweaking

2012-10-09  Paul Fitzpatrick  <paul@robotrebuilt.com>
