@@ -20,12 +20,12 @@ Pid::Pid(double p, double d, double i,
     max_int=intm;
     max_output=omax;
     offset=0;
-    stiction_pos_val = 0;
-    stiction_neg_val = 0;
+    stiction_up_val = 0;
+    stiction_down_val = 0;
 }
 
 Pid::Pid(double p, double d, double i, 
-         double intm, double sc, double omax, double st_pos, double st_neg)
+         double intm, double sc, double omax, double st_up, double st_down)
 {
     kp=p;
     kd=d;
@@ -34,8 +34,8 @@ Pid::Pid(double p, double d, double i,
     max_int=intm;
     max_output=omax;
     offset=0;
-    stiction_pos_val = st_pos;
-    stiction_neg_val = st_neg;
+    stiction_up_val = st_up;
+    stiction_down_val = st_down;
 }
 
 Pid::~Pid()
@@ -52,8 +52,8 @@ Pid::Pid()
     max_int=0;
     max_output=0;
     offset=0;
-    stiction_pos_val=0;
-    stiction_neg_val=0;
+    stiction_up_val=0;
+    stiction_down_val=0;
 }
 
 void Pid::setKp(double p)
@@ -91,8 +91,9 @@ void Pid::setOffset(double o)
     offset=o;
 }
 
-void Pid::setStictionValues(double pos_value, double neg_value)
+void Pid::setStictionValues(double up_value, double down_value)
 {
-    stiction_pos_val=pos_value;
-    stiction_neg_val=neg_value;
+    stiction_up_val=up_value;
+    stiction_down_val=down_value;
 }
+
